--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Vaibhav Ghawale | Portfolio </title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="common.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
@@ -20,7 +20,7 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">Vaibhav<span>Farooq</span></a></div>
+            <div class="logo"><a href="#">Vaibhav<span>Ghawale</span></a></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
@@ -42,7 +42,7 @@
                 <div class="text-1">Hi, my name is</div>
                 <div class="text-2">Vaibhav Ghawale</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="https://drive.google.com/file/d/1wujvoQz0gK8jlQ5Ovp9IhRYgC85rqh98/view" target="_blank">Resume</a>
+                <a href="https://drive.google.com/drive/u/0/folders/1RHyGHA3oQ6EYSTiAlRINHt2UD5k4vujR" target="_blank">Resume</a>
             </div>
         </div>
     </section>
