profile pic need to chahge

--- a/index.html
+++ b/index.html
@@ -39,8 +39,11 @@
        <div id="Heading">
        <p>Hi My Name is</p>
        <p>Vaibhav Ghawale</p>
-       <p>i'm java Backend Developer</p>
-    </div>
+       <p class="my-prof">i'm java Backend Developer</p>
+       </div>
+       <div>
+        <img src="./src/vaibhav.png"  alt="vaibhav photo" class="vaibhav-pic">
+       </div>
     </section>
 
     <!-- about section start -->
