new update with some bugs

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
                 <li><a href="#skills" class="menu-btn">Skills</a></li>
+                <li><a href="#skills" class="menu-btn">Education</a></li>
                 <li><a href="#project" class="menu-btn">Projects</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
             </ul>
@@ -50,14 +51,18 @@
         <div>
             <h2 class="title">About me</h2>
             <img src="./src/vaibhav.png" alt="vaibhav ghawale" class="my-pic">
-            <p class="about-me">A passionate JAVA Back-End Developer, Dedicated to developing robust applications that interact with the Backend part of web applications. Extensive expertise in website architecture, design, web design, and web API designs. I'm also an enthusiastic learner who's constantly working to learn new things and improve my skills to be the best version of myself.</p>
+
+            <p class="about-me">A passionate JAVA Back-End Developer, Dedicated to 
+            developing robust applications that interact with the Backend part of web applications. 
+            Extensive expertise in website architecture, design, web design, and web API designs. 
+            I'm also an enthusiastic learner who's constantly working to learn new things and 
+            improve my skills to be the best version of myself.</p>
         </div>
 
     </section>
 
     <!-- services section start -->
     <section class="services" id="services">
-
             <h2 class="title">My services</h2>
             <div class="serv-content ">
                 <div class="card">
@@ -124,43 +129,93 @@
         </div>
     </section>
 
+     <!------ Education--------->
+
+    <section class="services" id="education">
+        <h2 class="title">Education</h2>
+        <div class="serv-content ">
+            <div class="card">
+                <div class="box">
+                    <!-- <i class="fas fa-chart-line"></i> -->
+                    <img class="edu-logo" src="./src/sgbau.png" alt="">
+                    <div class="text">B.E.(Civil Engineering)</div>
+                    <p>knowledge of the earth's crust to solve construction problems,
+                        materials science and statistical analysis.
+                    </p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="box">
+                    <!-- <i class="fas fa-paint-brush"></i> -->
+                    <img class="edu-logo" src="./src/masai.png" alt="">
+                    <div class="text">Back-End Developer</div>
+                    <p>Complete Full-Time Course of
+                        Java Backend Developer
+                        Hands on Experience on front-end
+                        and backend technologies.
+                        Remote Course.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="box">
+                    <!-- <i class="fas fa-code"></i> -->
+                    <img class="edu-logo" src="./src/maharastrastate.png" alt="">
+                    <div class="text">10+2</div>
+                    <p>General Science</p>
+                </div>
+            </div>
+           </div>
+    </section>
+
     <!-- project section start -->
-    <section class="project" id="project">
-        <div class="max-width">
-            <h2 class="title">Projects</h2>
-            <div class="carousel owl-carousel">
-                <div class="card">
-                    <div class="box">
-                        <img src="./images/Screenshot (544).png" alt="Myntra_png">
-                        <div class="text">Mytheresa</div>
-                        <p>Mytheresa is a German e-commerce luxury fashion company.As an international retailer, Mytheresa operates in 8 languages: English, German, French, Italian, Spanish, Arabic, Chinese and Korean.</p>
-                        <p class="techStack">Tech Used: Html, CSS, JavaScript</p>
-                        <div class="repo-links">
-                            <div class="repo-div">
-                                <span>  <a href="https://github.com/Prashant3216/mytheresa.com" target="_blank"> Git Repo </a></span>
-                            </div>
-                            <div class="demo-div">
-                                <span> <a href="https://cheery-sorbet-56415b.netlify.app/" target="_blank">  Live Site  </a></span>
-                            </div>
-                        </div>
-                    </div>
+    <section class="project" id="project"> 
+        <h2 class="title">Project</h2>
+        <div class="cont-box">
+        <div class="project-main">
+            <div class="inside-1"><img src="./src/cm1.png" alt=""> </div>
+            <div class="inside-2">
+                <div><h2>CAMPAIGNMONITOR.COM (CLONE)</h2></div>
+                <div><p> Campaign Monitor Web helped us easily create beautiful emails that
+                        turned our Bombshell wetsuit into a global phenomenon.</p>
+                    <p>Tech Stack: HTML | CSS | JS</p>
+                    <p class="resp-proj">My Responsibilities
+                    front-end and backend database.</p>
+                    <a href="https://github.com/Abrar2003/symptomatic-property-4004" class="resume-btn">Github</a>
+                    <a href="https://jade-sawine-5e8a26.netlify.app/" class="resume-btn">Live</a>
                 </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="./images/Screenshot (545).png" alt="">
-                        <div class="text">Naukri.com</div>
-                        <p>Naukri.com is an Indian employment website operating in India.Naukri.com was launched in March 1997.The website follows Business-to-Business and Business-to-consumer models. </p>
-                        <p class="techStack">Tech Used: Html, CSS, JavaScript</p>
-                        <div class="repo-links">
-                            <div class="repo-div">
-                                <span>  <a href="https://github.com/Sab01123/Project_Naukri.com" target="_blank"> Git Repo </a></span>
-                            </div>
-                            <div class="demo-div">
-                                <span> <a href="vaibhav" target="_blank">  Live Site  </a></span>
-                            </div>
-                        </div>
-                    </div>
+            </div>
+        </div>
+        <div class="project-main">
+            <div class="inside-1"><img src="./src/ls1.png" alt=""> </div>
+            <div class="inside-2">
+                <div><h2>LIFESTYLESTORE.COM (CLONE)</h2></div>
+                <div><p> Campaign Monitor Web helped us easily create beautiful emails that
+                        turned our Bombshell wetsuit into a global phenomenon.</p>
+                    <p>Tech Stack: HTML | CSS | JS</p>
+                    <p class="resp-proj">My Responsibilities
+                    front-end and backend database.</p>
+                    <a href="https://github.com/AmitKuMaurya/LifeStyle-Collaboration" class="resume-btn">Github</a>
+                    <a href="https://ubiquitous-moonbeam-0077c0.netlify.app/" class="resume-btn">Live</a>
                 </div>
+            </div>
+        </div>
+        <div class="project-main">
+            <div class="inside-1"><img src="./src/orb.png" alt=""> </div>
+            <div class="inside-2">
+                <div><h2>ORBITZ.COM (CLONE)</h2></div>
+                <div><p>
+                    Orbitz.com help us to book hotels,flight,cars etc, and also help to choose best vacation plan to us.
+                </p>
+                    <p>Tech Stack: HTML | CSS | JS</p>
+                    < class="resp-proj">My Responsibilities
+                    front-end and backend database.
+                    Creating a navabar with all sign in and sigu up functinalities</P>
+                    <a href="https://github.com/thecodervaibhav/Team-App-Monsters" class="resume-btn">Github</a>
+                    <a href="https://reliable-llama-c038f5.netlify.app/" class="resume-btn">Live</a>
+                </div>
+            </div>
+        </div>
+    </div>
     </section>
 
     <!-- contact section start -->
@@ -168,19 +223,19 @@
         <div class="max-width">
             <h2 class="title">Contact me</h2>
             <div class="contact-content">
-                <div class="cont-box"><img src="./src/linkedin.png" alt=""><h2>Linkedin</h2></div>
-                <div class="cont-box"><img src="./src/GitHublogo.png" alt="" ><h2>Github</h2></div>
-                <div class="cont-box"><img src="./src/mail.png" alt="" ><h2>vaibhavghawale007@gmail.com</h2></div>
+                <div class="cont-box"><img src="./src/linkedin.png"  alt=""><h2><a href="https://www.linkedin.com/in/vaibhavghawale15/">Linkedin</a></h2></div>
+                <div class="cont-box"><img src="./src/GitHublogo.png" alt="" ><h2><a href="https://github.com/thecodervaibhav">Github</a> </h2></div>
+                <div class="cont-box"><img src="./src/mail.png" alt=""><a href="https://mail.google.com/mail/u/0/#inbox?compose=new">vaibhavghawale007@gmail.com</a> </h2></div>
                 <div class="cont-box"><img src="./src/phone.png" alt="" ><h2>+91 8554958977</h2></div>
-                <div class="cont-box"><img src="./src/tweet.png" alt="" ><h2>Twitter</h2></div>
+                <div class="cont-box"><img src="./src/tweet.png" alt="" > <h2><a href="https://twitter.com/VaibhavGhawale">Twitter</a></h2></div>
             </div>
         </div>
     </section>`
 
     <!-- footer section start -->
     <footer>
-        <span class="copyright"></span>2022 All Rights Reserved 
-</span>
+        <span class="copyright"></span>All Rights Reserved @ 2022
+    </span>
     </footer>
 
     <script src="./common.js"></script>
