--- a/index.html
+++ b/index.html
@@ -220,16 +220,17 @@
 
     <!-- contact section start -->
     <section class="contact" id="contact">
-        <div class="max-width">
+
             <h2 class="title">Contact me</h2>
-            <div class="contact-content">
-                <div class="cont-box"><img src="./src/linkedin.png"  alt=""><h2><a href="https://www.linkedin.com/in/vaibhavghawale15/">Linkedin</a></h2></div>
-                <div class="cont-box"><img src="./src/GitHublogo.png" alt="" ><h2><a href="https://github.com/thecodervaibhav">Github</a> </h2></div>
-                <div class="cont-box"><img src="./src/mail.png" alt=""><a href="https://mail.google.com/mail/u/0/#inbox?compose=new">vaibhavghawale007@gmail.com</a> </h2></div>
-                <div class="cont-box"><img src="./src/phone.png" alt="" ><h2>+91 8554958977</h2></div>
-                <div class="cont-box"><img src="./src/tweet.png" alt="" > <h2><a href="https://twitter.com/VaibhavGhawale">Twitter</a></h2></div>
+            <div class="contact-content-1">
+                <div class="my-cont">
+                <div class="cont-box-1"><img src="./src/linkedin2.png"  alt=""><h2><a href="https://www.linkedin.com/in/vaibhavghawale15/">Linkedin</a></h2></div>
+                <div class="cont-box-1"><img src="./src/GitHublogo2.png" alt="" ><h2><a href="https://github.com/thecodervaibhav">Github</a> </h2></div>
+                <div class="cont-box-1"><img src="./src/mail1.png" alt=""><h2><a href="https://mail.google.com/mail/u/0/#inbox?compose=new">vaibhavghawale007@gmail.com</a></h2></div>
+                <div class="cont-box-1"><img src="./src/phone1.png" alt="" ><h2>+91 8554958977</h2></div>
+                <div class="cont-box-1"><img src="./src/tweet.png" alt="" > <h2><a href="https://twitter.com/VaibhavGhawale">Twitter</a></h2></div>
+               </div>
             </div>
-        </div>
     </section>`
 
     <!-- footer section start -->
