--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     <section class="about" id="about">
         <div>
             <h2 class="title">About me</h2>
-            <img src="./src/vaibhav.png" alt="vaibhav ghawale" class="my-pic">
-
+           <div class="my-pic"> <img src="./src/vaibhav.png" alt="vaibhav ghawale" >
+           </div>
             <p class="about-me">A passionate JAVA Back-End Developer, Dedicated to 
             developing robust applications that interact with the Backend part of web applications. 
             Extensive expertise in website architecture, design, web design, and web API designs. 
@@ -149,10 +149,11 @@
                     <!-- <i class="fas fa-paint-brush"></i> -->
                     <img class="edu-logo" src="./src/masai.png" alt="">
                     <div class="text">Back-End Developer</div>
-                    <p>Complete Full-Time Course of
-                        Java Backend Developer
-                        Hands on Experience on front-end
-                        and backend technologies.
+                    <p>Complete Full-Time
+                        Java Backend Developer Course also get
+                        Hands on Experience on front-end and backend
+                        technologies.
+                        Learn Data Algorithm And Structure up to level 5. And adopt soft skill.
                         Remote Course.</p>
                 </div>
             </div>
@@ -161,7 +162,7 @@
                     <!-- <i class="fas fa-code"></i> -->
                     <img class="edu-logo" src="./src/maharastrastate.png" alt="">
                     <div class="text">10+2</div>
-                    <p>General Science</p>
+                    <p>Complete 10+2 in General Science from Nandgaon khandeshwar junior collage Nandgaon khandeshwar</p>
                 </div>
             </div>
            </div>
@@ -207,7 +208,7 @@
                     Orbitz.com help us to book hotels,flight,cars etc, and also help to choose best vacation plan to us.
                 </p>
                     <p>Tech Stack: HTML | CSS | JS</p>
-                    < class="resp-proj">My Responsibilities
+                    <p class="resp-proj">My Responsibilities
                     front-end and backend database.
                     Creating a navabar with all sign in and sigu up functinalities</P>
                     <a href="https://github.com/thecodervaibhav/Team-App-Monsters" class="resume-btn">Github</a>
@@ -226,7 +227,7 @@
                 <div class="my-cont">
                 <div class="cont-box-1"><img src="./src/linkedin2.png"  alt=""><h2><a href="https://www.linkedin.com/in/vaibhavghawale15/">Linkedin</a></h2></div>
                 <div class="cont-box-1"><img src="./src/GitHublogo2.png" alt="" ><h2><a href="https://github.com/thecodervaibhav">Github</a> </h2></div>
-                <div class="cont-box-1"><img src="./src/mail1.png" alt=""><h2><a href="https://mail.google.com/mail/u/0/#inbox?compose=new">vaibhavghawale007@gmail.com</a></h2></div>
+                <div class="cont-box-1"><img src="./src/mail1.png" alt=""><h2><a href="mailto:vaibhavghawale007@gmail.com?subject=regarding hiring">e-Mail</a></h2></div>
                 <div class="cont-box-1"><img src="./src/phone1.png" alt="" ><h2>+91 8554958977</h2></div>
                 <div class="cont-box-1"><img src="./src/tweet.png" alt="" > <h2><a href="https://twitter.com/VaibhavGhawale">Twitter</a></h2></div>
                </div>
