--- a/index.html
+++ b/index.html
@@ -190,11 +190,10 @@
             <div class="inside-1"><img src="./src/ls1.png" alt=""> </div>
             <div class="inside-2">
                 <div><h2>LIFESTYLESTORE.COM (CLONE)</h2></div>
-                <div><p> Campaign Monitor Web helped us easily create beautiful emails that
-                        turned our Bombshell wetsuit into a global phenomenon.</p>
+                <div><p> LifeStylestore is a online shoping website where you can purchase or sell products like cloths, bueaty, and other accesory</p>
                     <p>Tech Stack: HTML | CSS | JS</p>
                     <p class="resp-proj">My Responsibilities
-                    front-end and backend database.</p>
+                    making a Payment Gateway where user can easy make payment.</p>
                     <a href="https://github.com/AmitKuMaurya/LifeStyle-Collaboration" class="resume-btn">Github</a>
                     <a href="https://ubiquitous-moonbeam-0077c0.netlify.app/" class="resume-btn">Live</a>
                 </div>
