final update vaibhav

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="">Port<span>folio</span></a></div>
+            <div class="logo"><a href=""><span>Vaibhav</span></a></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
@@ -57,6 +57,12 @@
             Extensive expertise in website architecture, design, web design, and web API designs. 
             I'm also an enthusiastic learner who's constantly working to learn new things and 
             improve my skills to be the best version of myself.</p>
+            <div class="abt-img">
+                <img class="abt-img-1"  src="./src/mail1.png" alt="">
+                <img class="abt-img-2" src="./src/GitHublogo2.png" alt="">
+                <img class="abt-img-3" src="./src/linkedin2.png" alt="">
+                <img class="abt-img-4" src="./src/tweet.png" alt="">
+            </div>
         </div>
 
     </section>
@@ -92,7 +98,7 @@
     <!-- skills section start -->
     <section class="skills" id="skills">
         <div class="max-width">
-            <h2 class="title">My skills</h2>
+            <h2 class="title">Tech skills</h2>
             <div class="skills-content">
                 <div id="skils-content-1">
                     <div class="skill-1">
@@ -117,15 +123,34 @@
                         <img src="./src/csslogo.png" alt="">
                     </div>
                     <div class="skill-1">
-                        <img src="./src/springbootlogo.png" alt="">
-                    </div>
-                    <div class="skill-1">
-                        <img src="./src/javalogo.png" alt="">
+                        <img src="./src/DSA.png" alt="">
                     </div>
                 </div>
-
                 </div>
-            </div>
+                <h2 class="title soft">Soft skills</h2>
+                <div class="skills-content">
+                    <div id="skils-content-1">
+                        <div class="skill-2">
+                            <h2>Team Work</h2>
+                        </div>
+                        <div class="skill-2">
+                            <h2>Interpersonal Skill</h2>
+                        </div>
+                        <div class="skill-2">
+                            <h2>Communication Skill</h2>
+                        </div>
+                        <div class="skill-2">
+                            <h2>Problem Solving</h2>
+                        </div>
+                        <div class="skill-2">
+                            <h2>Remote Work</h2>
+                        </div>
+                        <div class="skill-2">
+                            <h2>Time Management</h2>
+                        </div>
+                    </div>
+                </div>
+              </div>
         </div>
     </section>
 
@@ -176,7 +201,7 @@
             <div class="inside-1"><img src="./src/cm1.png" alt=""> </div>
             <div class="inside-2">
                 <div><h2>CAMPAIGNMONITOR.COM (CLONE)</h2></div>
-                <div><p> Campaign Monitor Web helped us easily create beautiful emails that
+                <div class="pro-info"><p> Campaign Monitor Web helped us easily create beautiful emails that
                         turned our Bombshell wetsuit into a global phenomenon.</p>
                     <p>Tech Stack: HTML | CSS | JS</p>
                     <p class="resp-proj">My Responsibilities
@@ -190,7 +215,7 @@
             <div class="inside-1"><img src="./src/ls1.png" alt=""> </div>
             <div class="inside-2">
                 <div><h2>LIFESTYLESTORE.COM (CLONE)</h2></div>
-                <div><p> LifeStylestore is a online shoping website where you can purchase or sell products like cloths, bueaty, and other accesory</p>
+                <div class="pro-info"><p> LifeStylestore is a online shoping website where you can purchase or sell products like cloths, bueaty, and other accesory</p>
                     <p>Tech Stack: HTML | CSS | JS</p>
                     <p class="resp-proj">My Responsibilities
                     making a Payment Gateway where user can easy make payment.</p>
@@ -203,7 +228,7 @@
             <div class="inside-1"><img src="./src/orb.png" alt=""> </div>
             <div class="inside-2">
                 <div><h2>ORBITZ.COM (CLONE)</h2></div>
-                <div><p>
+                <div class="pro-info"><p>
                     Orbitz.com help us to book hotels,flight,cars etc, and also help to choose best vacation plan to us.
                 </p>
                     <p>Tech Stack: HTML | CSS | JS</p>
@@ -224,14 +249,14 @@
             <h2 class="title">Contact me</h2>
             <div class="contact-content-1">
                 <div class="my-cont">
-                <div class="cont-box-1"><img src="./src/linkedin2.png"  alt=""><h2><a href="https://www.linkedin.com/in/vaibhavghawale15/">Linkedin</a></h2></div>
-                <div class="cont-box-1"><img src="./src/GitHublogo2.png" alt="" ><h2><a href="https://github.com/thecodervaibhav">Github</a> </h2></div>
-                <div class="cont-box-1"><img src="./src/mail1.png" alt=""><h2><a href="mailto:vaibhavghawale007@gmail.com?subject=regarding hiring">e-Mail</a></h2></div>
-                <div class="cont-box-1"><img src="./src/phone1.png" alt="" ><h2>+91 8554958977</h2></div>
-                <div class="cont-box-1"><img src="./src/tweet.png" alt="" > <h2><a href="https://twitter.com/VaibhavGhawale">Twitter</a></h2></div>
+                <div class="cont-box-1 cont-box-a "><img src="./src/phone1.png" alt="" ><h2>+91 8554958977</h2></div>
+                <div class="cont-box-1 cont-box-b"><img src="./src/mail1.png" alt=""><h2><a href="mailto:vaibhavghawale007@gmail.com?subject=regarding hiring">e-Mail</a></h2></div>
+                <div class="cont-box-1 cont-box-c"><img src="./src/linkedin2.png"  alt=""><h2><a href="https://www.linkedin.com/in/vaibhavghawale15/" target="_blank">Linkedin</a></h2></div>
+                <div class="cont-box-1 cont-box-d"><img src="./src/GitHublogo2.png" alt="" ><h2><a href="https://github.com/thecodervaibhav" target="_blank">Github</a> </h2></div>
+                <div class="cont-box-1 cont-box-e"><img src="./src/tweet.png" alt="" > <h2><a href="https://twitter.com/VaibhavGhawale" target="_blank">Twitter</a></h2></div>
                </div>
             </div>
-    </section>`
+    </section>
 
     <!-- footer section start -->
     <footer>
