--- a/index.html
+++ b/index.html
@@ -243,6 +243,26 @@
     </div>
     </section>
 
+    <div id="github-stats">
+        <div class="container">
+            <h1 class="sub-title">My Github Stats</h1>
+            <div class="github-stats-list">
+                <div class="github-stat">
+                    <img src="https://github-readme-streak-stats.herokuapp.com/?user=thecodervaibhav&theme=indian-flag"
+                        alt="Github Contributions" />
+                </div>
+                <div class="github-stat">
+                    <img src="https://github-readme-stats.vercel.app/api?username=thecodervaibhav&theme=flag-india&show_icons=true&count_private=true"
+                        alt="Github Stats" />
+                </div>
+                <div class="github-stat">
+                    <img src="https://activity-graph.herokuapp.com/graph?username=thecodervaibhav&bg_color=ffffff&color=000080&line=138808&point=ff9933&area=true"
+                        alt="Github Graph" />
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- contact section start -->
     <section class="contact" id="contact">
 
