--- a/index.html
+++ b/index.html
@@ -206,8 +206,12 @@
                     <p>Tech Stack: HTML | CSS | JS</p>
                     <p class="resp-proj">My Responsibilities
                     front-end and backend database.</p>
-                    <a href="https://github.com/Abrar2003/symptomatic-property-4004" class="resume-btn">Github</a>
-                    <a href="https://jade-sawine-5e8a26.netlify.app/" class="resume-btn">Live</a>
+                    <!-- <a href="https://github.com/Abrar2003/symptomatic-property-4004" class="resume-btn">Github</a>
+                    <a href="https://jade-sawine-5e8a26.netlify.app/" class="resume-btn">Live</a> -->
+                    <div>
+                        <img class="pr1g" src="./src/GitHublogo2.png" alt="">
+                        <img class="pr1l" src="./src/live.webp" alt="">
+                    </div>
                 </div>
             </div>
         </div>
@@ -219,8 +223,12 @@
                     <p>Tech Stack: HTML | CSS | JS</p>
                     <p class="resp-proj">My Responsibilities
                     making a Payment Gateway where user can easy make payment.</p>
-                    <a href="https://github.com/AmitKuMaurya/LifeStyle-Collaboration" class="resume-btn">Github</a>
-                    <a href="https://ubiquitous-moonbeam-0077c0.netlify.app/" class="resume-btn">Live</a>
+                    <!-- <a href="https://github.com/AmitKuMaurya/LifeStyle-Collaboration" class="resume-btn">Github</a>
+                    <a href="https://ubiquitous-moonbeam-0077c0.netlify.app/" class="resume-btn">Live</a> -->
+                    <div>
+                        <img class="pr2g" src="./src/GitHublogo2.png" alt="">
+                        <img class="pr2l" src="./src/live.webp" alt="">
+                    </div>
                 </div>
             </div>
         </div>
@@ -235,17 +243,22 @@
                     <p class="resp-proj">My Responsibilities
                     front-end and backend database.
                     Creating a navabar with all sign in and sigu up functinalities</P>
-                    <a href="https://github.com/thecodervaibhav/Team-App-Monsters" class="resume-btn">Github</a>
-                    <a href="https://reliable-llama-c038f5.netlify.app/" class="resume-btn">Live</a>
+                    <!-- <a href="https://github.com/thecodervaibhav/Team-App-Monsters" class="resume-btn">Github</a>
+                    <a href="https://reliable-llama-c038f5.netlify.app/" class="resume-btn">Live</a> -->
+                    <div>
+                        <img class="pr3g" src="./src/GitHublogo2.png" alt="">
+                        <img class="pr3l" src="./src/live.webp" alt="">
+                    </div>
                 </div>
             </div>
         </div>
     </div>
     </section>
 
+    <section class="github-st" id="github-">
     <div id="github-stats">
         <div class="container">
-            <h1 class="sub-title">My Github Stats</h1>
+            <h1 class="title">Github Stats</h1>
             <div class="github-stats-list">
                 <div class="github-stat">
                     <img src="https://github-readme-streak-stats.herokuapp.com/?user=thecodervaibhav&theme=indian-flag"
@@ -262,7 +275,7 @@
             </div>
         </div>
     </div>
-
+</section>
     <!-- contact section start -->
     <section class="contact" id="contact">
 
