--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="text-1">Hi, my name is</div>
                 <div class="text-2">Vaibhav Ghawale</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="./src/Vaibhav-Ghawale-Resume.pdf" download="download_resume" id="resume-btn">Resume</a>
+                <a href="./src/Vaibhav-Ghawale-Resume.pdf" download="Vaibhav Ghawale Resume">Resume</a>
             </div>
         </div>
     </section>
