new update as IA said

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
             I'm also an enthusiastic learner who's constantly working to learn new things and 
             improve my skills to be the best version of myself.</p>
             <div class="abt-img">
-                <img class="abt-img-1"  src="./src/mail1.png" alt="">
+                <img class="abt-img-1"  src="./src/mail.png" alt="">
                 <img class="abt-img-2" src="./src/GitHublogo2.png" alt="">
-                <img class="abt-img-3" src="./src/linkedin2.png" alt="">
+                <img class="abt-img-3" src="./src/linkedin.png" alt="">
                 <img class="abt-img-4" src="./src/tweet.png" alt="">
             </div>
         </div>
@@ -203,14 +203,14 @@
                 <div><h2>CAMPAIGNMONITOR.COM (CLONE)</h2></div>
                 <div class="pro-info"><p> Campaign Monitor Web helped us easily create beautiful emails that
                         turned our Bombshell wetsuit into a global phenomenon.</p>
-                    <p>Tech Stack: HTML | CSS | JS</p>
+                    <p class="tech-stach">Tech Stack: HTML | CSS | JS</p>
                     <p class="resp-proj">My Responsibilities
                     front-end and backend database.</p>
                     <!-- <a href="https://github.com/Abrar2003/symptomatic-property-4004" class="resume-btn">Github</a>
                     <a href="https://jade-sawine-5e8a26.netlify.app/" class="resume-btn">Live</a> -->
                     <div>
                         <img class="pr1g" src="./src/GitHublogo2.png" alt="">
-                        <img class="pr1l" src="./src/live.webp" alt="">
+                        <img class="pr1l" src="./src/newlive1.png" alt="">
                     </div>
                 </div>
             </div>
@@ -220,14 +220,14 @@
             <div class="inside-2">
                 <div><h2>LIFESTYLESTORE.COM (CLONE)</h2></div>
                 <div class="pro-info"><p> LifeStylestore is a online shoping website where you can purchase or sell products like cloths, bueaty, and other accesory</p>
-                    <p>Tech Stack: HTML | CSS | JS</p>
+                    <p class="tech-stach">Tech Stack: HTML | CSS | JS</p>
                     <p class="resp-proj">My Responsibilities
                     making a Payment Gateway where user can easy make payment.</p>
                     <!-- <a href="https://github.com/AmitKuMaurya/LifeStyle-Collaboration" class="resume-btn">Github</a>
                     <a href="https://ubiquitous-moonbeam-0077c0.netlify.app/" class="resume-btn">Live</a> -->
                     <div>
                         <img class="pr2g" src="./src/GitHublogo2.png" alt="">
-                        <img class="pr2l" src="./src/live.webp" alt="">
+                        <img class="pr2l" src="./src/newlive1.png" alt="">
                     </div>
                 </div>
             </div>
@@ -239,7 +239,7 @@
                 <div class="pro-info"><p>
                     Orbitz.com help us to book hotels,flight,cars etc, and also help to choose best vacation plan to us.
                 </p>
-                    <p>Tech Stack: HTML | CSS | JS</p>
+                    <p class="tech-stach">Tech Stack: HTML | CSS | JS</p>
                     <p class="resp-proj">My Responsibilities
                     front-end and backend database.
                     Creating a navabar with all sign in and sigu up functinalities</P>
@@ -247,7 +247,7 @@
                     <a href="https://reliable-llama-c038f5.netlify.app/" class="resume-btn">Live</a> -->
                     <div>
                         <img class="pr3g" src="./src/GitHublogo2.png" alt="">
-                        <img class="pr3l" src="./src/live.webp" alt="">
+                        <img class="pr3l" src="./src/newlive1.png" alt="">
                     </div>
                 </div>
             </div>
@@ -255,7 +255,7 @@
     </div>
     </section>
 
-    <section class="github-st" id="github-">
+<section class="github-st" id="github-">
     <div id="github-stats">
         <div class="container">
             <h1 class="title">Github Stats</h1>
@@ -271,6 +271,11 @@
                 <div class="github-stat">
                     <img src="https://activity-graph.herokuapp.com/graph?username=thecodervaibhav&bg_color=ffffff&color=000080&line=138808&point=ff9933&area=true"
                         alt="Github Graph" />
+                </div>
+                <div class="github-stat">
+                    <h4 class="mb-0" style="text-align: center;color: #000;">Vaibhav Ghawale's contribution calendar</h4>
+                    <img src="https://ghchart.rshah.org/thecodervaibhav" alt="thecodervaibhav" style="width: 100%;height: auto; margin-top: 5vh;color: green;"/>
+                    <!-- <img src="https://activity-graph.herokuapp.com/calender?username=thecodervaibhav&bg_color=ffffff&color=000080&line=138808&point=ff9933&area=true" -->
                 </div>
             </div>
         </div>
